1st Edit Media (5).html

--- a/media (5).html
+++ b/media (5).html
@@ -93,7 +93,7 @@
     
 
 
-    /* Dsktop view */
+    /*This part for Dsktop view */
     @media screen and (max-width : 2600px){
       #header{
         height: 11rem;
