2nd Update on media (5).html

--- a/media (5).html
+++ b/media (5).html
@@ -149,7 +149,7 @@
 
 
 
-    /* Laptop view */
+    /* This part for Laptop view */
     @media screen and (max-width : 1450px){
       #header{
         height: 8rem;
