3rd Update on media (5).html

--- a/media (5).html
+++ b/media (5).html
@@ -259,7 +259,7 @@
     
 
     
-    /* Mobile view */
+    /*This part for Mobile view */
     @media screen and (max-width : 430px){
       #header{
         height: 4rem;
