--- a/media (5).html
+++ b/media (5).html
@@ -204,7 +204,7 @@
     }
     
     
-    /* Tablet view */
+    /*This part for Tablet view */
     @media screen and (max-width : 850px){
       #header{
         height: 7rem;
